--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -2,27 +2,29 @@
 
 .header {
   width: 100%;
+  height: 6vh;
   color: variables.$grayColor;
   background-color: variables.$deepBlueColor;
 
   &__nav {
     width: 100%;
-    height: 6vh;
     display: flex;
-    align-items: center;
     justify-content: center;
+    align-items: center;
     gap: 65px;
 
     @media (max-width: 768px) {
-      height: 7vh;
-      padding-right: 12px;
+      height: 6vh;
       gap: 0;
+      align-items: inherit;
       justify-content: space-between;
     }
 
     .menu--mobile {
+      height: 100%;
       display: none;
       color: variables.$whiteColor;
+      position: relative;
 
       @media (max-width: 768px) {
         width: 100%;
@@ -47,6 +49,8 @@
 
       @media (max-width: 768px) {
         width: 100px;
+        height: 20px;
+        margin-top: 12px;
       }
     }
 
@@ -95,7 +99,7 @@
       height: 6vh;
       display: flex;
       align-items: center;
-      gap: 25px;
+      gap: 10px;
 
       .user--option {
 
@@ -120,6 +124,7 @@
         .search-icon {
           width: 30px;
           height: 30px;
+          margin: 0 12px;
         }
 
         .user-icon {
@@ -128,7 +133,78 @@
 
           @media (max-width: 768px) {
             width: 30px;
+            margin: 0 12px 0 12px;
+            position: relative;
           }
+        }
+      }
+    }
+  }
+
+  #menu {
+    display: none;
+
+    @media (max-width: 768px) {
+      background-color: variables.$deepGrayColor;
+      width: 100%;
+      height: 130vh;
+      position: absolute;
+      top: 2.5rem;
+      flex-direction: column;
+      transition: 0.3s ease;
+
+      div {
+        padding: 14px 24px;
+        display: flex;
+        align-items: center;
+        gap: 10px;
+
+        img {
+          width: 16px;
+        }
+        
+        .menu--down--icon {
+          width: 10px;
+          height: 10px;
+        }
+
+        p {
+          font-size: 14px;
+          font-weight: 500;
+        }
+      }
+    }
+  }
+
+  #user {
+    display: none;
+
+    @media (max-width: 768px) {
+      background-color: variables.$deepGrayColor;
+      width: 100%;
+      height: 130vh;
+      position: absolute;
+      top: 2.5rem;
+      left: 0;
+      flex-direction: column;
+      transition: 0.3s ease;
+
+      div {
+        width: 100%;
+        padding: 14px 24px;
+        display: flex;
+        align-items: flex-start;
+        flex-direction: column;
+        gap: 25px;
+
+        .menu--down--icon {
+          width: 10px;
+          height: 10px;
+        }
+
+        p {
+          font-size: 14px;
+          font-weight: 500;
         }
       }
     }
