--- a/src/styles/_movie.scss
+++ b/src/styles/_movie.scss
@@ -105,7 +105,7 @@
         gap: 1rem;
   
         &__play {
-          padding: 5px 15px;
+          padding: 10px 15px 0 15px;
           border-radius: 8px;
           cursor: pointer;
           background-color: variables.$whiteColor;
@@ -124,7 +124,7 @@
         }
   
         &__type {
-          padding: 5px 15px;
+          padding: 10px 15px;
           border-radius: 8px;
           cursor: pointer;
           transition: 0.3s ease;
