--- a/src/styles/_mobile.scss
+++ b/src/styles/_mobile.scss
@@ -5,7 +5,9 @@
 
   @media (max-width: 768px) {
     width: 100%;
-    background-color: variables.$deepBlueColor;
+    background-image: url('../../dist/images/bg-mobile.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
     color: variables.$whiteColor;
     padding: 0 24px;
     display: flex;
