--- a/src/styles/_movie.scss
+++ b/src/styles/_movie.scss
@@ -3,7 +3,9 @@
 .movie {
   width: 100%;
   height: 100vh;
-  background-color: variables.$deepBlueColor;
+  background-image: url('../../dist/images/bg-desktop.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
   color: variables.$whiteColor;
 
   @media (max-width: 768px) {
